Fix bug to hide negative number in size field (#567)
* Fix bug for not showing negative number in size field

--- a/src/webview/pipeline/app/style.css
+++ b/src/webview/pipeline/app/style.css
@@ -299,7 +299,7 @@ body {
 .size-select-item {
   position: absolute;
   left: 105px;
-  top: 294px;
+  top: 290px;
   white-space: normal;
   width: 500px;
 }
@@ -307,7 +307,7 @@ body {
 .size-select-item-vtc {
   position: absolute;
   left: 105px;
-  top: 232px;
+  top: 229px;
   white-space: normal;
   width: 500px;
 }
